# ai-code-guard

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_code_guard/: __init__.py  cli.py  models.py  reporters.py  scanner.py
ai_code_guard/analyzers/: dependencies.py  prompt_injection.py  python_ast.py  secrets.py
ai_code_guard/patterns/: __init__.py  base.py  data_exfiltration.py  injection.py  prompt_injection.py  secrets.py
ai_code_guard/reporters/: __init__.py  console.py
examples/: vulnerable_code.py
tests/: __init__.py  test_scanner.py
